--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,6 @@
 PORT = 5000
 MONGODB_URI = mongodb://localhost:27017/E-Commerce
 JWT_SECRET = fgqdqwdsawdfffqwda
+EMAIL_APP_PASSWORD = bgkmctekrbbztznr
+EMAIL_NAME = ngocduc1542002@gmail.com
+URL_SERVER = http://localhost:5000
