--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,7 @@
 PORT = 5000
-MONGODB_URI = mongodb://localhost:27017/E-Commerce
+MONGODB_URI = mongodb://0.0.0.0:27017/E-commerce
 JWT_SECRET = fgqdqwdsawdfffqwda
 EMAIL_APP_PASSWORD = bgkmctekrbbztznr
 EMAIL_NAME = ngocduc1542002@gmail.com
 URL_SERVER = http://localhost:5000
+LIMIT_PRODUCTS = 2
