--- a/server/.env
+++ b/server/.env
@@ -5,3 +5,6 @@ EMAIL_APP_PASSWORD = bgkmctekrbbztznr
 EMAIL_NAME = ngocduc1542002@gmail.com
 URL_SERVER = http://localhost:5000
 LIMIT_PRODUCTS = 2
+CLOUDINARY_NAME=ddzsoxuml
+CLOUDINARY_KEY=882336181698675
+CLOUDINARY_SECRET=ydYnyb_0M0Wyxr9mfUz5HsI72M4
