--- a/server/.env
+++ b/server/.env
@@ -8,3 +8,4 @@ LIMIT_PRODUCTS = 2
 CLOUDINARY_NAME=ddzsoxuml
 CLOUDINARY_KEY=882336181698675
 CLOUDINARY_SECRET=ydYnyb_0M0Wyxr9mfUz5HsI72M4
+CLIENT_URL = http://localhost:3000
