--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,5 @@
 REACT_APP_API_URI = http://localhost:5000/api
 
 REACT_APP_LIMIT = 2
+
+REACT_APP_MCETINY = h873xb5lyf7a2dglv32ofxprr0effymnbhzhncuwzji0cdaw
