--- a/client/package.json
+++ b/client/package.json
@@ -9,11 +9,14 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.4.3",
+    "@tinymce/tinymce-react": "^4.3.0",
     "axios": "^1.4.0",
     "clsx": "^2.0.0",
+    "dompurify": "^3.0.6",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.47.0",
     "react-icons": "^4.10.1",
     "react-image-magnify": "^2.7.4",
     "react-masonry-css": "^1.0.16",
