handle update and delete product

--- a/client/package.json
+++ b/client/package.json
@@ -14,8 +14,9 @@
     "clsx": "^2.0.0",
     "dompurify": "^3.0.6",
     "moment": "^2.29.4",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-cursor-position": "^3.0.3",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.47.0",
     "react-icons": "^4.10.1",
     "react-image-magnify": "^2.7.4",
@@ -37,6 +38,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "resolutions": {
+    "react-image-magnify/react": "^18.3.1"
   },
   "eslintConfig": {
     "extends": [
